add organization api and swagger
