# app/swagger/swagger.json
@@ -127,11 +127,65 @@
                             "type": "string",
                             "example": "921f91c92407f7a5e8244af267a5bb428a4899a7b4bb63a29fbddeb7d8ffb50b"
                         }
+                    },
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "default": 1,
+                            "minimum": 1
+                        }
+                    },
+                    {
+                        "name": "limit",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "default": 10,
+                            "minimum": 1
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "Список промокодов"
+                    }
+                }
+            }
+        },
+        "/api/promo-codes/{id}": {
+            "get": {
+                "summary": "Получить промокод по ID",
+                "tags": ["Промо коды"],
+                "parameters": [
+                    {
+                        "name": "X-API-TOKEN",
+                        "in": "header",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "921f91c92407f7a5e8244af267a5bb428a4899a7b4bb63a29fbddeb7d8ffb50b"
+                        }
+                    },
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "description": "ID промокода",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Детали промокода"
+                    },
+                    "404": {
+                        "description": "Промокод не найден"
                     }
                 }
             }
